# mikro

./: .gitignore  404.html  =2.9  README.md  fakts.yaml  g.py  get_random.py  graphql.config.yaml  index.html  logs.txt  pyproject.toml  sitemap.xml  x.py  z.py
.github/workflows/: docker-master.yaml
assets/css/: styles.96e94841.css
assets/js/: 0269db79.199a346c.js  0269db79.4b68b3ce.js  0269db79.8d5c2ecf.js  0269db79.965d907c.js  08730d46.22ebf3f0.js  08730d46.7d631d6d.js  08730d46.f4b9ebdc.js  08730d46.fa87fdbb.js  0e384e19.0e182371.js  0e384e19.1c79e23a.js  0e384e19.51448fe5.js  0e384e19.6bd25ec6.js  0e384e19.84b36911.js  11de4d67.23455d0c.js  11de4d67.41e09a33.js  11de4d67.83264ea9.js  11de4d67.e22f386e.js  173c61e8.53721d0d.js  17634a83.2ffb4269.js  1df93b7f.23e70abf.js  1df93b7f.5c5b2084.js  1df93b7f.6ddf69de.js  1df93b7f.89e590f6.js  2a0b1704.407ca2a6.js  2a0b1704.e40611a8.js  2e388c4c.43633d6d.js  2e388c4c.6017ccdc.js  2e388c4c.bc1b41e6.js  2e388c4c.edec26cf.js  393be207.66293a67.js  393be207.8e25d5cf.js  393be207.ab9440f3.js  393be207.ca68dcb1.js  3c46d181.5467215c.js  3c46d181.eee50a45.js  3d694158.11772c9d.js  4e700109.0e3d0bee.js  4e700109.3d4cfa5f.js  4e700109.ca7fe584.js  4e700109.e81cb3ef.js  (+93 more)
backup/: array.py  funcs.py  parquet.py  scalars.py  schema.py  ward.py  widgets.py
backup/api/: schema.py
backup/graphql/mutations/: experiment.py  metric.py
backup/graphql/queries/: experiment.py  omerofile.py  representation.py  sample.py
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/mdx-blog-post/: index.html
blog/tags/: index.html
blog/tags/mikro/: index.html
blog/tags/rath/: index.html
docs/arkitekt/: index.html
docs/graphql/: index.html
docs/intro/: index.html
docs/reference/app/: index.html
docs/reference/arkitekt/: index.html
docs/reference/datalayer/: index.html
docs/reference/errors/: index.html
docs/reference/funcs/: index.html
docs/reference/mikro/: index.html
docs/reference/rath/: index.html
docs/reference/scalars/: index.html
docs/reference/structures/: index.html
docs/reference/traits/: index.html
docs/reference/widgets/: index.html
docs/turms/: index.html
examples/: mikro
examples/notebooks/: Beautiful Cooperation.ipynb
graphql/fragments/: camera.graphql  channel.graphql  context.graphql  dataset.graphql  era.graphql  experiment.graphql  feature.graphql  graph.graphql  instrument.graphql  label.graphql  link.graphql  map.graphql  metric.graphql  model.graphql  objective.graphql  omero.graphql  omerofile.graphql  position.graphql  representation.graphql  roi.graphql  sample.graphql  stage.graphql  table.graphql  thumbnail.graphql  timepoint.graphql  video.graphql
graphql/mutations/: camera.graphql  channel.graphql  context.graphql  dataset.graphql  era.graphql  experiment.graphql  feature.graphql  graph.graphql  instrument.graphql  label.graphql  link.graphql  map.graphql  metric.graphql  model.graphql  negotiate.graphql  objective.graphql  omero.graphql  position.graphql  presign.graphql  representation.graphql  roi.graphql  sample.graphql  stage.graphql  table.graphql  thumbnail.graphql  timepoint.graphql  video.graphql
graphql/queries/: camera.graphql  context.graphql  dataset.graphql  era.graphql  experiment.graphql  feature.graphql  graph.graphql  instrument.graphql  label.graphql  link.graphql  map.graphql  metric.graphql  model.graphql  my_query.graphql  objective.graphql  omero.graphql  position.graphql  representation.graphql  request.graphql  roi.graphql  sample.graphql  stage.graphql  table.graphql  tags.graphql  thumbnail.graphql  timepoint.graphql  video.graphql
graphql/subscriptions/: roi.graphql  sample.graphql
markdown-page/: index.html
mikro/: __init__.py  app.py  arkitekt  arkitekt.py  array.py  datalayer.py  errors.py  filesystem.py  funcs.py  items.py  manager.py  mikro  mikro.py  mixins.py  operation.py  parquet.py  rath.py  scalars.py  schema.py  structure.py  structures.py  traits.py  utils.py  ward.py  widgets.py
mikro/api/: __init__.py  schema.py
mikro/app/: fakts.py  mikro.py
mikro/cli/: main.py  utils.py
mikro/cli/schemas/: v1.graphql
mikro/composition/: base.py
mikro/contrib/fakts/: datalayer.py
mikro/fakts/: config.py  datalayer.py  mikro.py  rath.py
mikro/io/: download.py  errors.py  namers.py  types.py  upload.py
mikro/links/: __init__.py  datalayer.py  parquet.py  xarray.py
mikro/parsers/: __init__.py  parquet.py  xarray.py
mikro/testing/: datalayer.py
tests/: fakts.yaml  test_array_serialization copy.py  test_array_serialization.py  test_gql.py  test_initialization.py  test_integration.py  test_random.py  test_testcontainer.py  utils.py
tests/configs/: bergen.yaml  test.yaml
tests/integration/: docker-compose.yaml  docker-compose.yml  mikro.yaml
website/: docusaurus.config.js  package.json
website/blog/: 2021-08-01-mdx-blog-post.mdx  authors.yml
website/docs/: arkitekt.md  graphql.md  intro.md  turms.md
website/src/pages/: index.tsx
(+41 files in other folders)
