[tool.poetry]
name = "mikro"
version = "0.3.2"
description = "images for arkitekt"
authors = ["jhnnsrs <jhnnsrs@gmail.com>"]
license = "CC BY-NC 3.0"
packages = [{ include = "mikro" }]

[tool.poetry.dependencies]
python = "^3.8"
zarr = "^2.11.1"
xarray = "^2022.3.0"
s3fs = "^2022.2.0"
pandas = "^1.3.4"
pyarrow = "^6.0.1"
dask = "^2022.2.1"
turms = { version = "^0.2.3", python = ">=3.9", optional = true }
rath = ">=0.3.3"

[tool.poetry.extras]
turms = ["turms"]
complete = ["turms"]


[tool.poetry.group.dev.dependencies]
testcontainers = "3.7.0"
autoflake = "^1.7.7"
pytest = "^7.2.0"
PyQtWebEngine = "^5.15.5"
PyQt5 = "^5.15.6"
pytest-qt = "^4.2.0"
pytest-asyncio = "^0.20.2"
turms = { version = ">=0.2.3", python = "^3.9" }
aiohttp = "^3.8.3"
websockets = "^10.4"
black = "^22.10.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
qt_api = "pyqt5"
markers = [
    "integration: marks tests that require a running server",
    "qt: marks tests that require a running qt application",
]

[[tool.pydoc-markdown.loaders]]
type = "python"
search_path = ["mikro"]

[tool.pydoc-markdown.renderer]
type = "docusaurus"
docs_base_path = "website/docs"
