[tool.poetry]
name = "mikro"
version = "0.3.95"
description = "images for arkitekt"
authors = ["jhnnsrs <jhnnsrs@gmail.com>"]
license = "CC BY-NC 3.0"
packages = [{ include = "mikro" }]

[tool.poetry.dependencies]
python = "^3.8"
zarr = ">=2.14.2"
xarray = ">=2022.12.0"
s3fs = ">=2023.1.0"
pandas = ">=1.5.3"
pyarrow = ">=11.0"
dask = ">=2023.3.0"
rath = ">=0.5.0"

[tool.poetry.extras]
turms = ["turms"]

[tool.mypy]
exclude = ["venv/", "tests/", "examples/"]
ignore_missing_imports = true

[tool.ruff]
extend-select = ["ANN", "D1"]
extend-ignore = ["ANN101", "ANN002", "ANN003", "D100", "ANN401"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "tests",
    "examples",
]

# Same as Black.
line-length = 300

[tool.poetry.group.dev.dependencies]
httpx = "^0.23.0"
autoflake = "^1.7.7"
pytest = "^7.2.0"
testcontainers = "^3.7.0"
pytest-qt = "^4.2.0"
pytest-asyncio = "^0.20.2"
aiohttp = "^3.8.3"
websockets = "^10.4"
black = ">=22"
pytest-cov = "^4.0.0"
ruff = "^0.0.282"
mypy = "^1.7.1"
pydoc-markdown = "^4.8.2"
types-toml = "^0.10.8.7"
types-pyyaml = "^6.0.12.12"
pyarrow = "^14.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
qt_api = "pyqt5"
markers = [
    "integration: marks tests that require a running server",
    "qt: marks tests that require a running qt application",
]

[[tool.pydoc-markdown.loaders]]
type = "python"
search_path = ["mikro"]

[tool.pydoc-markdown.renderer]
type = "docusaurus"
docs_base_path = "website/docs"
